[package]
name = "bumble-umble-gee"
version = "0.1.0"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array-init = "2.0.0"
egui-macroquad = "0.7.0"
glam = "0.20.0"
legion = { version = "0.4.0", features = [
    "wasm-bindgen",
    "codegen",
], default-features = false }
macroquad = "0.3.10"
wee_alloc = "0.4.5"
wfc = { version = "0.10.4", features = ["js"] }

[features]

[profile.release]
# Do not perform backtrace for panic on release builds.
panic = 'abort'
# Perform optimizations on all codegen units.
codegen-units = 1
# Optimize for size.
opt-level = 's' # or 'z' to optimize "aggressively" for size
# Enable link time optimization.
lto = true

[dev-dependencies]
convert_case = "0.4.0"

[dev-dependencies.image]
version = "0.23.14"
default-features = false
features = ["png"]
